fix flicker on scroll

--- a/components/Gallery.module.scss
+++ b/components/Gallery.module.scss
@@ -5,8 +5,13 @@
 	max-width: 100vw;
 	padding: 0 !important;
 	margin: 0 !important;
-	overflow: hidden;
+	overflow-x: scroll;
+  scrollbar-width: none;
+	-ms-overflow-style: none;
 	-webkit-overflow-scrolling: touch;
+	&::-webkit-scrollbar{
+		display: none;	
+	}
 	@include mq($until: tablet) {
 		overflow-x: scroll;
 	}
@@ -15,7 +20,6 @@
 		flex-direction: row;
 		align-items: center;
 		position: relative;
-
 		z-index: 1;
 		min-width: 100vw;
 		max-height: 100vh;
